--- a/SupportCenter-WebAPI/SupportCenter-WebAPI/Resources/Resources.en.resx
+++ b/SupportCenter-WebAPI/SupportCenter-WebAPI/Resources/Resources.en.resx
@@ -20,21 +20,17 @@
     </resheader>
 
     <!--NavBar-->
-    <data name="SupportCenter">
-        <value>SupportCenter</value>
-    </data>
+
     <data name="Home">
         <value>Home</value>
     </data>
     <data name="About">
         <value>About</value>
     </data>
-    <data name="Contact">
-        <value>Contact</value>
-    </data>
 
     <!--Index-->
-    <data name="Welkom">
+    
+    <data name="WelkomMsg">
         <value>Welkom to the online helpdesk system.</value>
     </data>
 
@@ -42,7 +38,7 @@
         <value>New ticket</value>
     </data>
 
-    <data name="NieuwTicketmsg">
+    <data name="NieuwTicketMsg">
         <value>Create a new ticket in the system.</value>
     </data>
 
@@ -50,7 +46,7 @@
         <value>All Tickets</value>
     </data>
 
-    <data name="AlleTicketsmsg">
+    <data name="AlleTicketsMsg">
         <value>Show a list of all existing tickets.</value>
     </data>
 
@@ -58,12 +54,112 @@
         <value>Show ticket</value>
     </data>
 
-    <data name="ToonTicketmsg">
+    <data name="ToonTicketMsg">
         <value>Give details from one ticket.</value>
     </data>
 
     <data name="Ticketnummer">
         <value>Ticketnumber</value>
+    </data>
+    <!--About-->
+    
+    <data name="AboutDesc">
+        <value>Your application description page.</value>
+    </data>
+
+
+    <!--Contact-->
+    
+    <data name="AboutDesc2">
+        <value>Use this area to provide additional information.</value>
+    </data>
+ 
+    <data name="ContactDesc">
+        <value>Your contact page.</value>
+    </data>
+
+    <!--Create Ticket -->
+
+    <data name="TicketAanmaken">
+        <value>Create Ticket.</value>
+    </data>
+
+    <data name="Probleem">
+        <value>Problem</value>
+    </data>
+
+    <data name="Verzenden">
+        <value>Send</value>
+    </data>
+
+    <data name="Anuleer">
+        <value>Cancel</value>
+    </data>
+
+    <!--Delete Ticket-->
+
+    <data name="VerwijderTicket">
+        <value>Delete Ticket</value>
+    </data>
+
+    <data name="VerwijderTicketMsg">
+        <value>Are you sure you want to delete this ticket ?</value>
+    </data>
+
+    <data name="Verwijderen">
+        <value>Delete</value>
+    </data>
+
+    <!--Index Ticket-->
+
+    <data name="Nummer">
+        <value>Number</value>
+    </data>
+
+    <data name="Aangemaakt">
+        <value>Created on</value>
+    </data>
+
+    <data name="Bewerk">
+        <value>Edit</value>
+    </data>
+
+    <!--Edit Ticket -->
+
+    <data name="Ticketwijzigen">
+        <value>Edit Ticket</value>
+    </data>
+
+    <data name="Opslaan">
+        <value>Save</value>
+    </data>
+
+    <!-- ticket details -->
+
+    <data name="Lijst">
+        <value>List</value>
+    </data>
+
+    <data name="HerlaadAntwoorden">
+        <value>(Re)load answers</value>
+    </data>
+
+    <data name="Antwoord">
+        <value>Answer</value>
+    </data>
+
+    <data name="Datum">
+        <value>Date</value>
+    </data>
+
+    <data name="KlantAntwoord">
+        <value>Customer response?</value>
+    </data>
+
+    <!--Ticket details partial -->
+
+    <data name="Sluit">
+        <value>Close</value>
     </data>
 
 
